--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pertanyaan Acak</title>
+    <title>Teka-teki</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -25,16 +25,16 @@
 </head>
 <body>
     <div class="container">
-        <h1>Pertanyaan Acak</h1>
+        <h1>Teka-teki</h1>
         <p id="question">Loading question...</p>
     </div>
     <script>
         const questions = [
-            "Apa warna langit pada hari cerah?",
-            "Berapa banyak jari di tangan manusia?",
-            "Apa nama ibu kota negara Indonesia?",
-            "Sebutkan satu hewan yang bisa terbang.",
-            "Apa yang biasanya kita makan untuk sarapan?"
+            "Saya adalah bagian dari tanaman yang biasanya berwarna hijau dan menyerap cahaya matahari untuk proses fotosintesis",
+            "Saya adalah organ dalam tubuh manusia yang berfungsi untuk memompa darah ke seluruh tubuh",
+            "Saya adalah bagian dari tubuh hewan yang dapat terbang dan memiliki bulu",
+            "Saya adalah bagian dari tanaman yang tumbuh di bawah tanah dan berfungsi untuk menyerap air serta nutrisi",
+            "Saya adalah bagian dari tubuh manusia yang kita gunakan untuk melihat dan membaca"
         ];
 
         function showRandomQuestion() {
